# Assignment-Codes

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: DeployWebapp1AWS.yml  DeployWebapp1Azure.yml
nginx/: Dockerfile  README.md
nginx/conf.d/: default.conf
python/: .dockerignore  Dockerfile  README.md  main.py  requirements-windows.txt  yolo_method.py
python/test/: test_timer_trigger.http
rust/: Cargo.toml  README.md  docker-compose.yml  dockerfile
rust/assets/: index.html
rust/assets/controller/: index.html
rust/assets/image/: index.html
rust/helm/: Chart.yaml
rust/helm/templates/: deployment.yaml  service.yaml
rust/src/: main.rs
rust/src/action/: rover.rs  todo.rs
rust/test/http test/: image-test-1.http  rover.http  test_ping.http
rust/test/setup_redis/: initial.http
terraform_aws/: iam.tf  main.tf  outputs.tf  variables.tf
terraform_azure/: main.tf  outputs.tf  save_terraform_outputs.sh  variables.tf
typescript/: Dockerfile  eslint.config.js  package-lock.json  package.json
typescript/.github/workflows/: deploy.yml  synk.yml
typescript/Release/: README.md
typescript/src/: App.tsx  index.css
typescript/src/components/ImageCard/: ImageCard.tsx
typescript/src/components/InfoPanel/: InfoPanel.tsx
typescript/src/components/ResetCamera/: ResetCamera.tsx
typescript/src/types/: types.ts
typescript/src/utils/: api.ts
webapp1/: Dockerfile  README.md  main.py  requirements-windows.txt
webapp2/: Cargo.toml  Dockerfile
webapp2/src/: main.rs
(+2 files in other folders)
