[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing-subscriber = "0.3.17"
http = "0.2"
postgres = "0.19.9"
uuid = { version = "1.1", features = ["serde", "v4"] }
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
rand = "0.8"
time = { version = "0.3", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3"] }
chrono = "0.4"
dotenv = "0.15"
anyhow = "1.0"
local-ip-address = "0.6"
qair = "0.7.0"
qrcode = "0.14.1"
